[package]
name = "bnt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[dependencies]
rand = "^0.8"
daggy = "^0.7"
petgraph = "^0.6"
factorial = "0.2"
is_executable = "^1.0"
itertools = "0.10.1"
rayon = "1.5"
toml = "0.5"
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
uuid = { version = "0.8", features = ["serde", "v4"] }